[package]
name = "bevy-ui-dsl"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Anti-Alias"]
description = "A DSL library that simplifies the creation of widgets for bevy_ui."
repository = "https://github.com/Anti-Alias/bevy_ui_dsl"
homepage = "https://github.com/Anti-Alias/bevy_ui_dsl"
keywords = ["bevy", "dsl", "gui", "gamedev"]
categories = ["gui", "game-development"]
readme = "README.md"

[dependencies]
bevy_ui = { version = "0.10", features = ["bevy_text"] }
bevy_text = "0.10"
bevy_ecs = "0.10"
bevy_hierarchy = "0.10"
bevy_asset = "0.10"
bevy_render = "0.10"

[dev-dependencies]
bevy = "0.10"

[features]
class_helpers = []
